Стилизовал мобильную версию страницы с формой

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -15,4 +15,10 @@
   border: 2px solid #444444;
 
   cursor: pointer;
+
+  &--form {
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 16px;
+  }
 }
