--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,12 @@
 @import "blocks/reviews.scss";
 @import "blocks/contacts.scss";
 @import "blocks/footer.scss";
+@import "blocks/content.scss";
+@import "blocks/form.scss";
+@import "blocks/radio.scss";
+@import "blocks/checkbox.scss";
+@import "blocks/input.scss";
+@import "blocks/textarea.scss";
 
 
 @font-face {
