--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,7 +3,7 @@
 @import "blocks/visually-hidden.scss";
 @import "blocks/button.scss";
 @import "blocks/promo.scss";
-@import "blocks/product.scss";
+@import "blocks/main-product.scss";
 @import "blocks/features.scss";
 @import "blocks/reviews.scss";
 @import "blocks/contacts.scss";
@@ -13,7 +13,8 @@
 @import "blocks/radio.scss";
 @import "blocks/checkbox.scss";
 @import "blocks/input.scss";
-@import "blocks/textarea.scss";
+@import "blocks/products.scss";
+@import "blocks/creation.scss";
 
 
 @font-face {
