--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -62,3 +62,30 @@
 
   margin-right: 27px;
 }
+
+@media (min-width: $tablet-width) {
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 0 50px;
+    min-height: 143px;
+  }
+
+  .footer__logo {
+    display: block;
+  }
+
+  .socials {
+    border: none;
+  }
+
+  .socials__item {
+    margin-bottom: 0;
+  }
+
+  .creator__desc  {
+    margin-top: 12px;
+  }
+}
