--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,18 +1,6 @@
 .header {
   position: relative;
-  background-color: #FFFFFF;
 }
-
-.header__logo {
-  width: 320px;
-  height: 79px;
-  box-shadow: 0px 1px 0px #ECECEC, inset 0px 1px 0px #ECECEC;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 
 .header__button {
   position: absolute;
@@ -32,4 +20,11 @@
     background-image: url("../../img/menu-close.svg");
   }
 
+}
+
+
+@media (min-width: $tablet-width) {
+  .header__button {
+    display: none;
+  }
 }
