--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -25,4 +25,9 @@
     font-size: 18px;
     line-height: 16px;
   }
+
+  @media (min-width: $tablet-width) {
+    font-size: 17px;
+    line-height: 16px;
+  }
 }
