--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -5,6 +5,7 @@
   font-size: 17px;
   line-height: 24px; // 32 px pixelperfect
   color: #000000;
+  z-index: 2;
 }
 
 .menu__list {
@@ -74,6 +75,8 @@
     height: 100%;
     max-height: 100%;
     padding: 0;
+
+    box-shadow: none;
   }
 
   .menu__item--logo {
@@ -139,8 +142,6 @@
     padding-right: 50px;
     display: block;
     background-color: transparent;
-
-
 
     & .menu__link {
       justify-content: flex-end;
