--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -3,6 +3,7 @@
   background-image: url("../../img/hero-mobile@2x\ 1.jpg");
   /* background-repeat: no-repeat; */
   background-position: top -15px center;
+  z-index: 1;
 }
 
 .promo__title-wrapper {
@@ -57,7 +58,7 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
-    padding: 80px 50px 12px 50px;
+    padding: 80px 50px 13px 50px;
     background-image: url("../../img/hero-desktop\ 3.jpg");
     background-repeat: repeat;
     background-position: top -2px left 15px;
