Стилизовал десктопную версию главной страницы сайта

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -21,6 +21,10 @@
     background-image: url("../../img/menu-close.svg");
   }
 
+  &--menu-closed {
+    background-image: url("../../img/menu.svg");
+  }
+
 }
 
 
