--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -110,9 +110,9 @@
 
   .contacts__map {
     width: 768px;
-    background-image: url("../../img/map-pin.svg"), url("../../img/map-tablet@1x.jpg");
+    background-image: url("../../img/map-pin.svg"), url("../../img/map-tablet@1x.png");
     background-repeat: no-repeat;
-    background-position: top 140px left 360px,center;
+    background-position: top 140px left 360px, center;
 
     margin-left: -50px;
     margin-bottom: 60px;
@@ -123,5 +123,79 @@
     margin: 0 auto;
   }
 
+}
+
+@media (min-width: $desktop-width) {
+  .contacts {
+    position: relative;
+
+    margin: 0 50px;
+    padding: 0;
+    padding-top: 75px;
+    padding-left: 175px;
+    padding-bottom: 105px;
+
+    display: grid;
+    grid-template-areas:
+      "title map"
+      "info map"
+      "button map";
+    grid-template-columns: 2fr 3fr;
+  }
+
+  .contacts__title {
+    grid-area: title;
+    font-size: 53px;
+    line-height: 57px;
+
+    margin-top: 80px;
+    margin-bottom: 35px;
+
+    &::after {
+      position: absolute;
+      left: -115px;
+      bottom: -3px;
+    }
+  }
+
+  .contacts__info {
+    grid-area: info;
+    display: block;
+
+    margin-bottom: 53px;
+  }
+
+  .contacts__mail-text {
+    padding: 0;
+    padding-bottom: 6px;
+  }
+
+  .contacts__item {
+    justify-content: flex-start;
+  }
+
+  .contacts__button {
+    grid-area: button;
+    width: 230px;
+    height: 52px;
+
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 20px;
+
+    margin: 0;
+  }
+
+  .contacts__map {
+    grid-area: map;
+
+    margin: 0;
+    width: 100%;
+    height: 457px;
+
+    background-image: url("../../img/map-pin.svg"), url("../../img/map-desktop@1x\ 1.png");
+    background-position: left 238px top 144px, center;
+
+  }
 
 }
