--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -6,6 +6,18 @@
   line-height: 24px; // 32 px pixelperfect
   color: #000000;
   z-index: 2;
+
+
+}
+
+@media (max-width: $tablet-width) {
+  .menu--closed .menu__item {
+    display: none;
+  }
+
+  .menu--closed .menu__item--active {
+    display: block;
+  }
 }
 
 .menu__list {
@@ -44,7 +56,11 @@
   background-position: left 32px center;
 }
 
-.menu__item--hidden {
+.menu__item--tablet {
+  display: none;
+}
+
+.menu__item--desktop {
   display: none;
 }
 
@@ -83,8 +99,8 @@
     order: 1;
     grid-column: 1/3;
     padding-left: 50px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    border-right: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
 
     & .menu__link {
       justify-content: flex-start;
@@ -95,7 +111,7 @@
     order: 2;
     grid-column: 3/4;
 
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
     & .menu__link {
       font-size: 0;
@@ -106,8 +122,8 @@
     order: 3;
     grid-column: 4/6;
     padding-right: 50px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    border-left: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
 
     & .menu__link {
       justify-content: flex-end;
@@ -119,10 +135,8 @@
     padding-left: 50px;
     background-color: transparent;
 
-    & .menu__link {
-      font-size: 15px;
-      line-height: 24px;
-    }
+    font-size: 15px;
+    line-height: 24px;
   }
 
   .menu__item--form {
@@ -130,10 +144,8 @@
 
     background-color: transparent;
 
-    & .menu__link {
-      font-size: 15px;
-      line-height: 24px;
-    }
+    font-size: 15px;
+    line-height: 24px;
   }
 
   .menu__item--delivery {
@@ -143,13 +155,111 @@
     display: block;
     background-color: transparent;
 
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    color: #444444;
+
     & .menu__link {
       justify-content: flex-end;
-
-      font-weight: 400;
-      font-size: 15px;
-      line-height: 24px;
-      color: #444444;
     }
+  }
+
+  .menu__item--tablet {
+    display: block;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .menu__list {
+    grid-template-columns: 234px 165px 175px 175px 83px 317px;
+  }
+
+  .menu__item {
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 24px;
+  }
+
+  .menu__item--desktop {
+    display: block;
+  }
+
+  .menu__item--catalog {
+    order: 1;
+
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 24px;
+
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
+
+  }
+
+  .menu__item--form {
+    order: 2;
+
+    padding-left: 35px;
+    white-space: nowrap;
+
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 24px;
+
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+
+  .menu__item--logo {
+    order: 3;
+
+    grid-column: 3/5;
+    padding: 0;
+
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
+
+    & .menu__link {
+      justify-content: center;
+    }
+  }
+
+  .menu__item--search {
+    order: 4;
+    grid-column: 5/6;
+
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 24px;
+  }
+
+  .menu__item--cart {
+    order: 5;
+    grid-column: 6/7;
+
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 24px;
+  }
+
+  .menu__item--new {
+    order: 6;
+    padding-left: 50px;
+  }
+
+  .menu__item--sale {
+    order: 7;
+
+    & .menu__link {
+      justify-content: center;
+    }
+  }
+
+  .menu__item--delivery {
+    order: 8;
+
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
   }
 }
