--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -55,3 +55,13 @@ body {
     margin-top: -67px;
   }
 }
+
+@media (min-width:$desktop-width) {
+  body {
+    width: $desktop-width;
+  }
+
+  .page__content {
+    margin-top: -67px;
+  }
+}
