--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,15 +1,13 @@
 .promo {
+  padding-top: 74px;
   background-color: #ffffff;
-  background-image: url("../../img/hero-mobile@2x\ 1.jpg");
-  /* background-repeat: no-repeat; */
+  background-image: url("../../img/index/hero-mobile@2x.jpg");
   background-position: top -15px center;
   z-index: 1;
 }
 
 .promo__title-wrapper {
   padding: 0 30px;
-
-  margin-top: 74px;
   margin-bottom: 120px;
 }
 
@@ -59,10 +57,10 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
-    padding: 80px 50px 13px 50px;
-    background-image: url("../../img/hero-desktop\ 3.jpg");
-    background-repeat: repeat;
-    background-position: top -2px left 15px;
+    padding: 154px 50px 13px 50px;
+    background-image: url("../../img/index/hero-desktop.jpg");
+    background-repeat: no-repeat;
+    background-position: top -2px center;
 
     &::after {
       content: "";
@@ -73,6 +71,11 @@
       height: 24px;
       background-image: url("../../img/zigzag-fill-desktop.svg");
       background-repeat: repeat;
+    }
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/index/hero-desktop@2x.jpg");
+      background-size: contain;
     }
   }
 
@@ -113,9 +116,10 @@
 
 @media (min-width: $desktop-width) {
   .promo {
-    background-image: url("../../img/hero-desktop\ 1.jpg") ;
+    background-image: url("../../img/index/hero-desktop.jpg") ;
     background-position: top 0px center;
     background-repeat: no-repeat;
+    padding-top: 78px;
     padding-bottom: 5px;
     overflow-x: hidden;
 
@@ -123,6 +127,11 @@
       left: -50px;
       min-width: 1250px;
       background-size: cover;
+    }
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/index/hero-desktop@2x.jpg");
+      background-size: contain;
     }
   }
 
