--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -51,11 +51,16 @@
   width: 320px;
   margin-left: -30px;
 
-  background-image: url("../../img/map-pin.svg"), url("../../img/map-mobile@1x\ 1.png");
+  background-image: url("../../img/index/map-pin.svg"), url("../../img/index/map-mobile@1x.png");
   background-repeat: no-repeat;
   background-position: left 138px top 145px, center;
 
   margin-bottom: 41px;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../../img/index/map-pin.svg"), url("../../img/index/map-mobile@2x.png");
+    background-size: auto, contain;
+  }
 }
 
 .contacts__button {
@@ -110,12 +115,17 @@
 
   .contacts__map {
     width: 768px;
-    background-image: url("../../img/map-pin.svg"), url("../../img/map-tablet@1x.png");
+    background-image: url("../../img/index/map-pin.svg"), url("../../img/index/map-tablet@1x.png");
     background-repeat: no-repeat;
     background-position: top 140px left 360px, center;
 
     margin-left: -50px;
     margin-bottom: 60px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/index/map-pin.svg"), url("../../img/index/map-tablet@2x.png");
+      background-size: auto, contain;
+    }
   }
 
   .contacts__button {
@@ -193,9 +203,13 @@
     width: 100%;
     height: 457px;
 
-    background-image: url("../../img/map-pin.svg"), url("../../img/map-desktop@1x\ 1.png");
+    background-image: url("../../img/index/map-pin.svg"), url("../../img/index/map-desktop@1x.png");
     background-position: left 238px top 144px, center;
 
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/index/map-pin.svg"), url("../../img/index/map-desktop@2x.png");
+      background-size: auto, contain;
+    }
   }
 
 }
