--- a/source/sass/blocks/creation.scss
+++ b/source/sass/blocks/creation.scss
@@ -44,11 +44,16 @@
   box-sizing: border-box;
   width: 100%;
   height: 150px;
-  background-image: url("../../img/catalog/video-mobile 1.jpg");
+  background-image: url("../../img/catalog/video-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
 
   margin-bottom: 35px;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../../img/catalog/video-mobile@2x.jpg");
+    background-size: contain;
+  }
 }
 
 .creation__video-button {
@@ -104,10 +109,15 @@
     width: 100%;
     height: 455px;
 
-    background-image: url("../../img/catalog/video-tablet\ 1.jpg");
+    background-image: url("../../img/catalog/video-tablet.jpg");
     background-position: center;
 
     margin-bottom: 38px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/catalog/video-tablet@2x.jpg");
+      background-size: contain;
+    }
   }
 
   .creation__title-wrapper {
@@ -169,6 +179,11 @@
     background-position: center;
 
     margin: 0;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/catalog/video-desktop@2x.jpg");
+      background-size: contain;
+    }
   }
 
   .creation__title-wrapper {
